Modifico Media Querie

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <meta name="theme-color" content="#d90006">
     <meta property="og:title" name="twitter:title" content="Landing Page - Giménez Lucas">
     <meta property="twitter:card" content="summary">
-    <meta property="og:image" name="twitter:image" content="https://mirato1.github.io/LandingPage-Mircha/aatrox.jpg">
-    <meta property="og:url" content="https://mirato1.github.io/LandingPage-Mircha/">
+    <meta property="og:image" name="twitter:image" content="https://mirato1.github.io/LandingPage-Mircha/eula.jpg">
+    <meta property="og:url" content="https://mirato1.github.io/LandingPage-Mircha/index.html">
     <meta property="og:type" name="twitter:url" content="website">
 
     <!--Styles CSS-->
