Cambié unas cositas

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
     <meta name="theme-color" content="#d90006">
     <meta property="og:title" name="twitter:title" content="Landing Page - Giménez Lucas">
     <meta property="twitter:card" content="summary">
-    <meta property="og:image" name="twitter:image" content="https://mirato1.github.io/LandingPage-Mircha/eula.jpg">
-    <meta property="og:url" content="https://mirato1.github.io/LandingPage-Mircha/index.html">
-    <meta property="og:type" name="twitter:url" content="website">
+    <meta property="og:type" content="website">
+    <meta property="og:image" name="twitter:image"
+        content="https://mirato1.github.io/LandingPage-Mircha/assets/aatrox.jpg">
+    <meta property="og:url" name="twitter:url" content="https://mirato1.github.io/LandingPage-Mircha/index.html">
 
     <!--Styles CSS-->
     <link rel="stylesheet" href="style.css">
