--- a/index.html
+++ b/index.html
@@ -15,14 +15,22 @@
 
     <!-- Iconito que se muestra en la pestaña -->
     <link rel="canonical" href="https://mirato1.github.io/LandingPage-Mircha/">
-    <link rel="shortcut icon" href="https://mirato1.github.io/LandingPage-Mircha/assets/favicon.png">
-    <link rel="apple-touch-icon" href="https://mirato1.github.io/LandingPage-Mircha/assets/favicon.png">
+    <link rel="apple-touch-icon" sizes="180x180"
+        href="https://mirato1.github.io/LandingPage-Mircha/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32"
+        href="https://mirato1.github.io/LandingPage-Mircha/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16"
+        href="https://mirato1.github.io/LandingPage-Mircha/favicon-16x16.png">
+    <link rel="manifest" href="https://mirato1.github.io/LandingPage-Mircha/site.webmanifest">
+    <link rel="mask-icon" href="https://mirato1.github.io/LandingPage-Mircha/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+
     <meta name="theme-color" content="#d90006">
     <meta property="og:title" name="twitter:title" content="Landing Page - Giménez Lucas">
     <meta property="twitter:card" content="summary">
     <meta property="og:type" content="website">
     <meta property="og:image" name="twitter:image"
-        content="https://mirato1.github.io/LandingPage-Mircha/assets/aatrox.jpg">
+        content="https://mirato1.github.io/LandingPage-Mircha/assets/hero-image-home.jpg">
     <meta property="og:url" name="twitter:url" content="https://mirato1.github.io/LandingPage-Mircha/index.html">
 
     <!--Styles CSS-->
