No se quiere poner el iconito

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="canonical" href="https://mirato1.github.io/LandingPage-Mircha/">
     <link rel="apple-touch-icon" sizes="180x180"
         href="https://mirato1.github.io/LandingPage-Mircha/apple-touch-icon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32"
         href="https://mirato1.github.io/LandingPage-Mircha/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16"
