--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 
     <!-- Iconito que se muestra en la pestaña -->
     <link rel="canonical" href="https://mirato1.github.io/LandingPage-Mircha/">
+
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180"
         href="https://mirato1.github.io/LandingPage-Mircha/apple-touch-icon.png">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32"
         href="https://mirato1.github.io/LandingPage-Mircha/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16"
@@ -25,6 +26,8 @@
     <link rel="manifest" href="https://mirato1.github.io/LandingPage-Mircha/site.webmanifest">
     <link rel="mask-icon" href="https://mirato1.github.io/LandingPage-Mircha/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="https://mirato1.github.io/LandingPage-Mircha/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 
     <meta name="theme-color" content="#d90006">
     <meta property="og:title" name="twitter:title" content="Landing Page - Giménez Lucas">
