--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180"
-        href="https://mirato1.github.io/LandingPage-Mircha/apple-touch-icon.png">
+        href="https://mirato1.github.io/LandingPage-Mircha/assets/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32"
-        href="https://mirato1.github.io/LandingPage-Mircha/favicon-32x32.png">
+        href="https://mirato1.github.io/LandingPage-Mircha/assets/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16"
-        href="https://mirato1.github.io/LandingPage-Mircha/favicon-16x16.png">
-    <link rel="manifest" href="https://mirato1.github.io/LandingPage-Mircha/site.webmanifest">
-    <link rel="mask-icon" href="https://mirato1.github.io/LandingPage-Mircha/safari-pinned-tab.svg" color="#5bbad5">
+        href="https://mirato1.github.io/LandingPage-Mircha/assets/favicon-16x16.png">
+    <link rel="manifest" href="https://mirato1.github.io/LandingPage-Mircha/assets/site.webmanifest">
+    <link rel="mask-icon" href="https://mirato1.github.io/LandingPage-Mircha/assets/safari-pinned-tab.svg"
+        color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-config" content="https://mirato1.github.io/LandingPage-Mircha/browserconfig.xml">
+    <meta name="msapplication-config" content="https://mirato1.github.io/assets/LandingPage-Mircha/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 
     <meta name="theme-color" content="#d90006">
