--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
         color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-config" content="https://mirato1.github.io/assets/LandingPage-Mircha/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
 
     <meta name="theme-color" content="#d90006">
     <meta property="og:title" name="twitter:title" content="Landing Page - Giménez Lucas">
@@ -63,7 +62,7 @@
             <nav class="nav__menu">
                 <a href="#inicio">Inicio</a>
                 <a href="#acerca">Sobre Mí</a>
-                <a href="#conocimientos">Conocimientos</a>
+                <a href="#campeones">Campeones</a>
                 <a href="#portafolio">Proyectos</a>
                 <a href="#testimonios">Testimonios</a>
                 <a href="#contacto">Contacto</a>
@@ -75,8 +74,7 @@
     <main>
         <!-- Sección Inicio -->
         <section id="inicio" class="home">
-            <article class="hero__image"
-                style="--hero-image: url('assets/hero-image-home.jpg'); --hero-attachment:fixed;">
+            <article class="hero__image" style="--hero-image: url('assets/aatrox.jpg'); --hero-attachment:fixed;">
                 <aside class="hero__image--opacity" style="--hero-opacity-color:var(--black-alpha-color)">
                     <div class="hero__image--content">
                         <h2 class="hero__image--title" style="--hero-text-color: var(--white-color);">
@@ -115,7 +113,7 @@
             </article>
 
             <article>
-                <img class="gray__scale" src="assets/jonmircha.jpg" alt="LucasGiménez">
+                <img class="portrait__image" src="assets/Challenger 2021.png" alt="LucasGiménez">
             </article>
 
             <article>
@@ -165,105 +163,107 @@
             </article>
         </section>
 
-        <!-- Sección Conocimientos -->
-        <section id="conocimientos" class="languages section bg-gray-light">
+        <!-- Sección Campeones -->
+        <section id="campeones" class="champions section bg-gray-light">
             <div class="container full__screen--lg">
-                <h2 class="section__title">Mis Conocimientos</h2>
+                <h2 class="section__title">Mis "Mains"</h2>
 
-                <article class="knowledge__card">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                        <path
-                            d="M20,3H4C2.897,3,2,3.897,2,5v14c0,1.103,0.897,2,2,2h16c1.103,0,2-0.897,2-2V5C22,3.897,21.103,3,20,3z M4,19V7h16 l0.002,12H4z" />
-                        <path
-                            d="M9.293 9.293L5.586 13 9.293 16.707 10.707 15.293 8.414 13 10.707 10.707zM14.707 9.293L13.293 10.707 15.586 13 13.293 15.293 14.707 16.707 18.414 13z" />
-                    </svg>
-                    <h3>HTML5</h3>
+                <article class="champion__card">
+                    <img src="assets/Aatrox.png" alt="Aatrox">
+                    <h3>Aatrox</h3>
                     <p>
-                        Sé mucho html5 etc etc etc etc etc etc.
-                        Sé mucho html5 etc etc etc etc etc etc.
-                        Sé mucho html5 etc etc etc etc etc etc.
-                        Sé mucho html5 etc etc etc etc etc etc.
+                        EL DEMONIO PAPÁ
                     </p>
                 </article>
 
-                <article class="knowledge__card">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                        <path
-                            d="M20,3H4C2.897,3,2,3.897,2,5v14c0,1.103,0.897,2,2,2h16c1.103,0,2-0.897,2-2V5C22,3.897,21.103,3,20,3z M4,19V7h16 l0.002,12H4z" />
-                        <path
-                            d="M9.293 9.293L5.586 13 9.293 16.707 10.707 15.293 8.414 13 10.707 10.707zM14.707 9.293L13.293 10.707 15.586 13 13.293 15.293 14.707 16.707 18.414 13z" />
-                    </svg>
-                    <h3>HTML5</h3>
+                <article class="champion__card">
+                    <img src="assets/Akshan.png" alt="Akshan">
+                    <h3>Akshan</h3>
                     <p>
-                        Sé mucho html5 etc etc etc etc etc etc.
-                        Sé mucho html5 etc etc etc etc etc etc.
-                        Sé mucho html5 etc etc etc etc etc etc.
-                        Sé mucho html5 etc etc etc etc etc etc.
+                        MACUMBERO
                     </p>
                 </article>
 
-                <article class="knowledge__card">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                        <path
-                            d="M20,3H4C2.897,3,2,3.897,2,5v14c0,1.103,0.897,2,2,2h16c1.103,0,2-0.897,2-2V5C22,3.897,21.103,3,20,3z M4,19V7h16 l0.002,12H4z" />
-                        <path
-                            d="M9.293 9.293L5.586 13 9.293 16.707 10.707 15.293 8.414 13 10.707 10.707zM14.707 9.293L13.293 10.707 15.586 13 13.293 15.293 14.707 16.707 18.414 13z" />
-                    </svg>
-                    <h3>HTML5</h3>
+                <article class="champion__card">
+                    <img src="assets/Sylas.png" alt="Sylas">
+                    <h3>Sylas</h3>
                     <p>
-                        Sé mucho html5 etc etc etc etc etc etc.
-                        Sé mucho html5 etc etc etc etc etc etc.
-                        Sé mucho html5 etc etc etc etc etc etc.
-                        Sé mucho html5 etc etc etc etc etc etc.
+                        EL CHAMPION
                     </p>
                 </article>
 
-                <article class="knowledge__card">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                        <path
-                            d="M20,3H4C2.897,3,2,3.897,2,5v14c0,1.103,0.897,2,2,2h16c1.103,0,2-0.897,2-2V5C22,3.897,21.103,3,20,3z M4,19V7h16 l0.002,12H4z" />
-                        <path
-                            d="M9.293 9.293L5.586 13 9.293 16.707 10.707 15.293 8.414 13 10.707 10.707zM14.707 9.293L13.293 10.707 15.586 13 13.293 15.293 14.707 16.707 18.414 13z" />
-                    </svg>
-                    <h3>HTML5</h3>
+                <article class="champion__card">
+                    <img src="assets/Riven.png" alt="Riven">
+                    <h3>Riven</h3>
                     <p>
-                        Sé mucho html5 etc etc etc etc etc etc.
-                        Sé mucho html5 etc etc etc etc etc etc.
-                        Sé mucho html5 etc etc etc etc etc etc.
-                        Sé mucho html5 etc etc etc etc etc etc.
+                        LA ROTA
                     </p>
                 </article>
 
-                <article class="knowledge__card">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                        <path
-                            d="M20,3H4C2.897,3,2,3.897,2,5v14c0,1.103,0.897,2,2,2h16c1.103,0,2-0.897,2-2V5C22,3.897,21.103,3,20,3z M4,19V7h16 l0.002,12H4z" />
-                        <path
-                            d="M9.293 9.293L5.586 13 9.293 16.707 10.707 15.293 8.414 13 10.707 10.707zM14.707 9.293L13.293 10.707 15.586 13 13.293 15.293 14.707 16.707 18.414 13z" />
-                    </svg>
-                    <h3>HTML5</h3>
+                <article class="champion__card">
+                    <img src="assets/Kled.png" alt="Kled">
+                    <h3>Kled</h3>
                     <p>
-                        Sé mucho html5 etc etc etc etc etc etc.
-                        Sé mucho html5 etc etc etc etc etc etc.
-                        Sé mucho html5 etc etc etc etc etc etc.
-                        Sé mucho html5 etc etc etc etc etc etc.
+                        EL TILTEADO
                     </p>
                 </article>
 
-                <article class="knowledge__card">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                        <path
-                            d="M20,3H4C2.897,3,2,3.897,2,5v14c0,1.103,0.897,2,2,2h16c1.103,0,2-0.897,2-2V5C22,3.897,21.103,3,20,3z M4,19V7h16 l0.002,12H4z" />
-                        <path
-                            d="M9.293 9.293L5.586 13 9.293 16.707 10.707 15.293 8.414 13 10.707 10.707zM14.707 9.293L13.293 10.707 15.586 13 13.293 15.293 14.707 16.707 18.414 13z" />
-                    </svg>
-                    <h3>HTML5</h3>
+                <article class="champion__card">
+                    <img src="assets/Camille.png" alt="Camille">
+                    <h3>Camille</h3>
                     <p>
-                        Sé mucho html5 etc etc etc etc etc etc.
-                        Sé mucho html5 etc etc etc etc etc etc.
-                        Sé mucho html5 etc etc etc etc etc etc.
+                        LA CYBORG
                     </p>
                 </article>
+
+                <article class="champion__card">
+                    <img src="assets/Akali.png" alt="Akali">
+                    <h3>Akali</h3>
+                    <p>
+                        LA NINJA
+                    </p>
+                </article>
+
+                <article class="champion__card">
+                    <img src="assets/Fiora.png" alt="Fiora">
+                    <h3>Fiora</h3>
+                    <p>
+                        LA FRANCESA
+                    </p>
+                </article>
+
+                <article class="champion__card">
+                    <img src="assets/Gwen.png" alt="Gwen">
+                    <h3>Gwen</h3>
+                    <p>
+                        LA MUÑECA
+                    </p>
+                </article>
+
+                <article class="champion__card">
+                    <img src="assets/Jayce.png" alt="Jayce">
+                    <h3>Jayce</h3>
+                    <p>
+                        FACHERO SENDOH
+                    </p>
+                </article>
+
+                <article class="champion__card">
+                    <img src="assets/LeeSin.png" alt="LeeSin">
+                    <h3>Lee Sin</h3>
+                    <p>
+                        EL CIEGO
+                    </p>
+                </article>
+
+                <article class="champion__card">
+                    <img src="assets/Vladimir.png" alt="Vladimir">
+                    <h3>Vladimir</h3>
+                    <p>
+                        EL VÁMPIRO
+                    </p>
+                </article>
+
             </div>
         </section>
 
