--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
 
         <!-- Sección Acerca -->
         <section id="acerca" class="about section container full__screen--lg">
-            <article class="text__right--lg">
-                <aside class="text__center text__right--lg">
-                    <h1>Lucas Nahuel Giménez</h1>
-                    <h5>Desarrollador y Programador <i>Web</i></h5>
+            <article>
+                <aside class="text__center">
+                    <h1>Mirato</h1>
+                    <h5><b>Challenger S9 S10 S11</b></h5>
                 </aside>
                 <p>Empecé a estudiar programación en 2019, con un curso de videojuegos en la UTN utilizando
                     <i>Unity</i>. Ese mismo año realicé un curso <i>Web Full Stack</i> dictado en Digital House, donde
@@ -267,6 +267,249 @@
             </div>
         </section>
 
+        <!-- Sección Runas Maestrias ETC -->
+        <section id="runas" class="section bg-gray-light">
+            <div class="container full__screen--lg">
+                <h2 class="section__title">Runas y Maestrias</h2>
+                <article class="champion__info">
+                    <div class="champion__info--header">
+                        <img src="assets/Aatrox.png" alt="Aatrox">
+                        <div class="champion__header--content">
+                            <h2>AATROX</h2>
+                            <h4>The Darking Blade</h4>
+                        </div>
+                        <div class="champion__header--abilities">
+                            <div class="champion__skill--label">
+                                <img src="assets/Aatrox/Aatrox_Passive.png" alt="Aatrox Passive">
+                                <div class="skill__label--key bottom-center">P</div>
+                            </div>
+                            <div class="champion__skill--label">
+                                <img src="assets/Aatrox/AatroxQ.png" alt="Aatrox Q">
+                                <div class="skill__label--key bottom-center">Q</div>
+                            </div>
+                            <div class="champion__skill--label">
+                                <img src="assets/Aatrox/AatroxW.png" alt="Aatrox W">
+                                <div class="skill__label--key bottom-center">W</div>
+                            </div>
+                            <div class="champion__skill--label">
+                                <img src="assets/Aatrox/AatroxE.png" alt="Aatrox E">
+                                <div class="skill__label--key bottom-center">E</div>
+                            </div>
+                            <div class="champion__skill--label">
+                                <img src="assets/Aatrox/AatroxR.png" alt="Aatrox R">
+                                <div class="skill__label--key bottom-center">R</div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="champion__info--runes">
+                        <div class="champion__runes--content">
+                            <div class="champion__runes--tree">
+                                <div class="champion__runes--name section__header">
+                                    Runas de Aatrox
+                                </div>
+                                <div class="rune__tree">
+                                    <div class="primary__tree">
+                                        <div class="rune__tree--header">
+                                            <div class="rune__img--container">
+                                                <img src="assets/precision.png" alt="Precision">
+                                            </div>
+                                            <div class="rune__tree--title">Precision</div>
+                                        </div>
+
+                                        <div class="primary__tree--keystone">
+                                            <div class="masteries keystone__row">
+                                                <div class="masterie masterie__inactive keystone">
+                                                    <img src="assets/Runas/PressTheAttack.png" alt="PressTheAttack">
+                                                </div>
+                                                <div class="masterie  masterie__inactive keystone">
+                                                    <img src="assets/Runas/LethalTempoTemp.png" alt="LethalTempoTemp">
+                                                </div>
+                                                <div class="masterie masterie__inactive keystone">
+                                                    <img src="assets/Runas/FleetFootwork.png" alt="FleetFootwork">
+                                                </div>
+                                                <div class="masterie
+                                                                             keystone">
+                                                    <img src="assets/Runas/Conqueror.png" alt="Conqueror">
+                                                </div>
+                                            </div>
+                                            <div class="runes__row">
+                                                <div class="masteries">
+                                                    <div class="masterie masterie__inactive">
+                                                        <img src="assets/Runas/Overheal.png" alt="Overheal">
+                                                    </div>
+                                                    <div class="masterie masterie__active">
+                                                        <img src="assets/Runas/Triumph.png" alt="Triumph">
+                                                    </div>
+                                                    <div class="masterie masterie__inactive">
+                                                        <img src="assets//Runas/PresenceOfMind.png"
+                                                            alt="PresenceOfMind">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="runes__row">
+                                                <div class="masteries">
+                                                    <div class="masterie masterie__inactive">
+                                                        <img src="assets/Runas/LegendAlacrity.png" alt="LegendAlacrity">
+                                                    </div>
+                                                    <div class="masterie masterie__active">
+                                                        <img src="assets/Runas/LegendTenacity.png" alt="LegendTenacity">
+                                                    </div>
+                                                    <div class="masterie masterie__inactive">
+                                                        <img src="assets/Runas/LegendBloodline.png"
+                                                            alt="LegendBloodline">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="runes__row">
+                                                <div class="masteries">
+                                                    <div class="masterie masterie__inactive">
+                                                        <img src="assets/Runas/CoupDeGrace.png" alt="CoupDeGrace">
+                                                    </div>
+                                                    <div class="masterie masterie__inactive">
+                                                        <img src="assets/Runas/CutDown.png" alt="CutDown">
+                                                    </div>
+                                                    <div class="masterie masterie__active">
+                                                        <img src="assets/Runas/LastStand.png" alt="LastStand">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                    <div class="secondary__tree">
+                                        <div class="rune__tree--header">
+                                            <div class="rune__img--container">
+                                                <img src="assets/resolve.png" alt="Resolve">
+                                            </div>
+                                            <div class="rune__tree--title">Resolve</div>
+                                        </div>
+                                        <div class="runes__row">
+                                            <div class="masteries">
+                                                <div class="masterie masterie__inactive">
+                                                    <img src="assets/Runas/Demolish.png" alt="Demolish">
+                                                </div>
+                                                <div class="masterie masterie__inactive">
+                                                    <img src="assets/Runas/FontOfLife.png" alt="FontOfLife">
+                                                </div>
+                                                <div class="masterie masterie__inactive">
+                                                    <img src="assets/Runas/MirrorShell.png" alt="MirrorShell">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="runes__row">
+                                            <div class="masteries">
+                                                <div class="masterie masterie__inactive">
+                                                    <img src="assets/Runas/Conditioning.png" alt="Conditioning">
+                                                </div>
+                                                <div class="masterie masterie__inactive">
+                                                    <img src="assets/Runas/SecondWind.png" alt="SecondWind">
+                                                </div>
+                                                <div class="masterie masterie__active">
+                                                    <img src="assets/Runas/BonePlating.png" alt="BonePlating">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="runes__row">
+                                            <div class="masteries">
+                                                <div class="masterie masterie__inactive">
+                                                    <img src="assets/Runas/Overgrowth.png" alt="Overgrowth">
+                                                </div>
+                                                <div class="masterie masterie__active">
+                                                    <img src="assets/Runas/Revitalize.png" alt="Revitalize">
+                                                </div>
+                                                <div class="masterie masterie__inactive">
+                                                    <img src="assets/Runas/Unflinching.png" alt="Unflinching">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="separador"></div>
+                                        <div class="runes__row">
+                                            <div class="runes__row">
+                                                <div class="masteries">
+                                                    <div class="rune masterie__active">
+                                                        <img src="assets/Runas/StatModsAdaptiveForceIcon.png"
+                                                            alt="StatModsAdaptiveForceIcon">
+                                                    </div>
+                                                    <div class="rune masterie__inactive">
+                                                        <img src="assets/Runas/StatModsAttackSpeedIcon.png"
+                                                            alt="StatModsAttackSpeedIcon">
+                                                    </div>
+                                                    <div class="rune masterie__inactive">
+                                                        <img src="assets/Runas/StatModsCDRScalingIcon.png"
+                                                            alt="StatModsCDRScalingIcon">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="runes__row">
+                                                <div class="masteries">
+                                                    <div class="rune masterie__active">
+                                                        <img src="assets/Runas/StatModsAdaptiveForceIcon.png"
+                                                            alt="StatModsAdaptiveForceIcon">
+                                                    </div>
+                                                    <div class="rune masterie__inactive">
+                                                        <img src="assets/Runas/StatModsArmorIcon.png"
+                                                            alt="StatModsArmorIcon">
+                                                    </div>
+                                                    <div class="rune masterie__inactive">
+                                                        <img src="assets/Runas/StatModsMagicResIcon.png"
+                                                            alt="StatModsMagicResIcon">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="runes__row">
+                                                <div class="masteries">
+                                                    <div class="rune masterie__inactive">
+                                                        <img src="assets/Runas/StatModsHealthScalingIcon.png"
+                                                            alt="StatModsHealthScalingIcon">
+                                                    </div>
+                                                    <div class="rune masterie__active">
+                                                        <img src="assets/Runas/StatModsArmorIcon.png"
+                                                            alt="StatModsArmorIcon">
+                                                    </div>
+                                                    <div class="rune masterie__inactive">
+                                                        <img src="assets/Runas/StatModsMagicResIcon.png"
+                                                            alt="StatModsMagicResIcon">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="champion__build--spells">
+                                    <div class="champion__runes--spells">
+                                        <div class="section__header">
+                                            Hechizos
+                                        </div>
+                                        <div class="spells__container">
+                                            <img src="assets/SummonerTeleport.png" alt="Teleport">
+                                            <img src="assets/SummonerFlash.png" alt="Flash">
+                                        </div>
+                                    </div>
+                                    <div class="champion__runes--build">
+                                        <div class="section__header--right">
+                                            Full Build
+                                        </div>
+                                        <div class="build__container">
+                                            <img src="assets/Items/Goredrinker.png" alt="Goredrinker">
+                                            <img src="assets/Items/Sterakk.png" alt="Sterakk">
+                                            <img src="assets/Items/Tabis.png" alt="Tabis">
+                                            <img src="assets/Items/DD.png" alt="DD">
+                                            <img src="assets/Items/Chemptank.png" alt="Chemptank">
+                                            <img src="assets/Items/GA.png" alt="GA">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                            <div class="champion__info--skills"></div>
+
+                </article>
+
+            </div>
+        </section>
         <!-- Sección Portafolio -->
         <section id="portafolio" class="proyect section">
             <div class="container">
