Querie mobile y 720px

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <header class="header">
         <section class="container">
             <div class="header__logo">
-                <a href="index.html">LucasG</a>
+                <a href="#inicio">Mirato</a>
             </div>
             <button class="header__menu-btn">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -168,13 +168,15 @@
             <div class="container full__screen--lg">
                 <h2 class="section__title">Mis "Mains"</h2>
 
-                <article class="champion__card">
-                    <img src="assets/Aatrox.png" alt="Aatrox">
-                    <h3>Aatrox</h3>
-                    <p>
-                        EL DEMONIO PAPÁ
-                    </p>
-                </article>
+                <a href="#runas">
+                    <article class="champion__card">
+                        <img src="assets/Aatrox.png" alt="Aatrox">
+                        <h3>Aatrox</h3>
+                        <p>
+                            EL DEMONIO PAPÁ
+                        </p>
+                    </article>
+                </a>
 
                 <article class="champion__card">
                     <img src="assets/Akshan.png" alt="Akshan">
@@ -306,10 +308,10 @@
                     <div class="champion__info--runes">
                         <div class="champion__runes--content">
                             <div class="champion__runes--tree">
-                                <div class="champion__runes--name section__header">
-                                    Runas de Aatrox
-                                </div>
                                 <div class="rune__tree">
+                                    <div class="champion__runes--name section__header">
+                                        Runas de Aatrox
+                                    </div>
                                     <div class="primary__tree">
                                         <div class="rune__tree--header">
                                             <div class="rune__img--container">
@@ -379,98 +381,100 @@
 
                                     </div>
                                     <div class="secondary__tree">
-                                        <div class="rune__tree--header">
-                                            <div class="rune__img--container">
-                                                <img src="assets/resolve.png" alt="Resolve">
+                                        <div class="rune__tree--v2">
+                                            <div class="rune__tree--header">
+                                                <div class="rune__img--container">
+                                                    <img src="assets/resolve.png" alt="Resolve">
+                                                </div>
+                                                <div class="rune__tree--title">Resolve</div>
                                             </div>
-                                            <div class="rune__tree--title">Resolve</div>
-                                        </div>
-                                        <div class="runes__row">
-                                            <div class="masteries">
-                                                <div class="masterie masterie__inactive">
-                                                    <img src="assets/Runas/Demolish.png" alt="Demolish">
-                                                </div>
-                                                <div class="masterie masterie__inactive">
-                                                    <img src="assets/Runas/FontOfLife.png" alt="FontOfLife">
-                                                </div>
-                                                <div class="masterie masterie__inactive">
-                                                    <img src="assets/Runas/MirrorShell.png" alt="MirrorShell">
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="runes__row">
-                                            <div class="masteries">
-                                                <div class="masterie masterie__inactive">
-                                                    <img src="assets/Runas/Conditioning.png" alt="Conditioning">
-                                                </div>
-                                                <div class="masterie masterie__inactive">
-                                                    <img src="assets/Runas/SecondWind.png" alt="SecondWind">
-                                                </div>
-                                                <div class="masterie masterie__active">
-                                                    <img src="assets/Runas/BonePlating.png" alt="BonePlating">
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="runes__row">
-                                            <div class="masteries">
-                                                <div class="masterie masterie__inactive">
-                                                    <img src="assets/Runas/Overgrowth.png" alt="Overgrowth">
-                                                </div>
-                                                <div class="masterie masterie__active">
-                                                    <img src="assets/Runas/Revitalize.png" alt="Revitalize">
-                                                </div>
-                                                <div class="masterie masterie__inactive">
-                                                    <img src="assets/Runas/Unflinching.png" alt="Unflinching">
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="separador"></div>
-                                        <div class="runes__row">
                                             <div class="runes__row">
-                                                <div class="masteries">
-                                                    <div class="rune masterie__active">
-                                                        <img src="assets/Runas/StatModsAdaptiveForceIcon.png"
-                                                            alt="StatModsAdaptiveForceIcon">
+                                                <div class="masteries shard">
+                                                    <div class="masterie masterie__inactive">
+                                                        <img src="assets/Runas/Demolish.png" alt="Demolish">
                                                     </div>
-                                                    <div class="rune masterie__inactive">
-                                                        <img src="assets/Runas/StatModsAttackSpeedIcon.png"
-                                                            alt="StatModsAttackSpeedIcon">
+                                                    <div class="masterie masterie__inactive">
+                                                        <img src="assets/Runas/FontOfLife.png" alt="FontOfLife">
                                                     </div>
-                                                    <div class="rune masterie__inactive">
-                                                        <img src="assets/Runas/StatModsCDRScalingIcon.png"
-                                                            alt="StatModsCDRScalingIcon">
+                                                    <div class="masterie masterie__inactive">
+                                                        <img src="assets/Runas/MirrorShell.png" alt="MirrorShell">
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="runes__row">
-                                                <div class="masteries">
-                                                    <div class="rune masterie__active">
-                                                        <img src="assets/Runas/StatModsAdaptiveForceIcon.png"
-                                                            alt="StatModsAdaptiveForceIcon">
+                                                <div class="masteries shard">
+                                                    <div class="masterie masterie__inactive">
+                                                        <img src="assets/Runas/Conditioning.png" alt="Conditioning">
                                                     </div>
-                                                    <div class="rune masterie__inactive">
-                                                        <img src="assets/Runas/StatModsArmorIcon.png"
-                                                            alt="StatModsArmorIcon">
+                                                    <div class="masterie masterie__inactive">
+                                                        <img src="assets/Runas/SecondWind.png" alt="SecondWind">
                                                     </div>
-                                                    <div class="rune masterie__inactive">
-                                                        <img src="assets/Runas/StatModsMagicResIcon.png"
-                                                            alt="StatModsMagicResIcon">
+                                                    <div class="masterie masterie__active">
+                                                        <img src="assets/Runas/BonePlating.png" alt="BonePlating">
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="runes__row">
-                                                <div class="masteries">
-                                                    <div class="rune masterie__inactive">
-                                                        <img src="assets/Runas/StatModsHealthScalingIcon.png"
-                                                            alt="StatModsHealthScalingIcon">
+                                                <div class="masteries shard">
+                                                    <div class="masterie masterie__inactive">
+                                                        <img src="assets/Runas/Overgrowth.png" alt="Overgrowth">
                                                     </div>
-                                                    <div class="rune masterie__active">
-                                                        <img src="assets/Runas/StatModsArmorIcon.png"
-                                                            alt="StatModsArmorIcon">
+                                                    <div class="masterie masterie__active">
+                                                        <img src="assets/Runas/Revitalize.png" alt="Revitalize">
                                                     </div>
-                                                    <div class="rune masterie__inactive">
-                                                        <img src="assets/Runas/StatModsMagicResIcon.png"
-                                                            alt="StatModsMagicResIcon">
+                                                    <div class="masterie masterie__inactive">
+                                                        <img src="assets/Runas/Unflinching.png" alt="Unflinching">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="separador"></div>
+                                            <div class="runes__row">
+                                                <div class="runes__row">
+                                                    <div class="masteries shard">
+                                                        <div class="rune masterie__active">
+                                                            <img src="assets/Runas/StatModsAdaptiveForceIcon.png"
+                                                                alt="StatModsAdaptiveForceIcon">
+                                                        </div>
+                                                        <div class="rune masterie__inactive">
+                                                            <img src="assets/Runas/StatModsAttackSpeedIcon.png"
+                                                                alt="StatModsAttackSpeedIcon">
+                                                        </div>
+                                                        <div class="rune masterie__inactive">
+                                                            <img src="assets/Runas/StatModsCDRScalingIcon.png"
+                                                                alt="StatModsCDRScalingIcon">
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="runes__row">
+                                                    <div class="masteries shard">
+                                                        <div class="rune masterie__active">
+                                                            <img src="assets/Runas/StatModsAdaptiveForceIcon.png"
+                                                                alt="StatModsAdaptiveForceIcon">
+                                                        </div>
+                                                        <div class="rune masterie__inactive">
+                                                            <img src="assets/Runas/StatModsArmorIcon.png"
+                                                                alt="StatModsArmorIcon">
+                                                        </div>
+                                                        <div class="rune masterie__inactive">
+                                                            <img src="assets/Runas/StatModsMagicResIcon.png"
+                                                                alt="StatModsMagicResIcon">
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="runes__row">
+                                                    <div class="masteries shard">
+                                                        <div class="rune masterie__inactive">
+                                                            <img src="assets/Runas/StatModsHealthScalingIcon.png"
+                                                                alt="StatModsHealthScalingIcon">
+                                                        </div>
+                                                        <div class="rune masterie__active">
+                                                            <img src="assets/Runas/StatModsArmorIcon.png"
+                                                                alt="StatModsArmorIcon">
+                                                        </div>
+                                                        <div class="rune masterie__inactive">
+                                                            <img src="assets/Runas/StatModsMagicResIcon.png"
+                                                                alt="StatModsMagicResIcon">
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -488,7 +492,7 @@
                                         </div>
                                     </div>
                                     <div class="champion__runes--build">
-                                        <div class="section__header--right">
+                                        <div class="section__header">
                                             Full Build
                                         </div>
                                         <div class="build__container">
