Arreglo unas cositas

--- a/index.html
+++ b/index.html
@@ -508,8 +508,17 @@
                             </div>
 
 
-                            <div class="champion__info--skills"></div>
+                            <div class="champion__info--skills">
+                                <div class="champion__skill--priority">
+                                    <div class="section__header">Prioridad de habilidades</div>
+                                </div>
 
+                                <div class="champion__skill--path">
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </article>
 
             </div>
