Modifiqué la imagen que no se ve

--- a/index.html
+++ b/index.html
@@ -514,6 +514,7 @@
                                 </div>
 
                                 <div class="champion__skill--path">
+                                    <div class="section__header">Orden de habilidades</div>
 
                                 </div>
                             </div>
