Cambié las imágenes y agregué unas cositas

--- a/index.html
+++ b/index.html
@@ -511,11 +511,47 @@
                             <div class="champion__info--skills">
                                 <div class="champion__skill--priority">
                                     <div class="section__header">Prioridad de habilidades</div>
+                                    <div class="skill__priority--content">
+                                        <div class="skill__priority--path">
+                                            <div class="champion__skill--label">
+                                                <img src="assets/Aatrox/AatroxQ.png" alt="Aatrox Q">
+                                                <div class="skill__label--key bottom-center">Q</div>
+                                            </div>
+                                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 12"
+                                                class="arrow-right">
+                                                <path d="M6 12l6-6-6-6-1.053 1.053 4.176 4.21H0v1.474h9.123l-4.21 4.21z"
+                                                    fill="#FFF" fill-rule="nonzero"></path>
+                                            </svg>
+                                            <div class="champion__skill--label">
+                                                <img src="assets/Aatrox/AatroxE.png" alt="Aatrox E">
+                                                <div class="skill__label--key bottom-center">E</div>
+                                            </div>
+                                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 12"
+                                                class="arrow-right">
+                                                <path d="M6 12l6-6-6-6-1.053 1.053 4.176 4.21H0v1.474h9.123l-4.21 4.21z"
+                                                    fill="#FFF" fill-rule="nonzero"></path>
+                                            </svg>
+                                            <div class="champion__skill--label">
+                                                <img src="assets/Aatrox/AatroxW.png" alt="Aatrox W">
+                                                <div class="skill__label--key bottom-center">W</div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
 
                                 <div class="champion__skill--path">
                                     <div class="section__header">Orden de habilidades</div>
+                                    <div class="skill__path--container">
+                                        <div class="skill__order--row"></div>
 
+                                        <div class="skill__order--row"></div>
+
+                                        <div class="skill__order--row"></div>
+
+                                        <div class="skill__order--row"></div>
+
+                                        <div class="skill__order--row"></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
