--- a/index.html
+++ b/index.html
@@ -542,20 +542,274 @@
                                 <div class="champion__skill--path">
                                     <div class="section__header">Orden de habilidades</div>
                                     <div class="skill__path--container">
-                                        <div class="skill__order--row"></div>
+                                        <div class="skill__order--row">
+                                            <div class="skill__img--label">
+                                                <img src="assets/Aatrox/AatroxQ.png" alt="Aatrox Q">
+                                                <div class="skill__key--label">Q</div>
+                                            </div>
+                                            <div class="skill__order">
+                                                <div class="skill__up">
+                                                    <div>1</div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="skill__up">
+                                                    <div>4</div>
+                                                </div>
+                                                <div class="skill__up">
+                                                    <div>5</div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="skill__up">
+                                                    <div>7</div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="skill__up--max">
+                                                    <div>9</div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                            </div>
+                                        </div>
 
-                                        <div class="skill__order--row"></div>
+                                        <div class="skill__order--row">
+                                            <div class="skill__img--label">
+                                                <img src="assets/Aatrox/AatroxW.png" alt="Aatrox W">
+                                                <div class="skill__key--label">W</div>
+                                            </div>
+                                            <div class="skill__order">
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="skill__up">
+                                                    <div>3</div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="skill__up">
+                                                    <div>14</div>
+                                                </div>
+                                                <div class="skill__up">
+                                                    <div>15</div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="skill__up">
+                                                    <div>17</div>
+                                                </div>
+                                                <div class="skill__up--max">
+                                                    <div>18</div>
+                                                </div>
+                                            </div>
+                                        </div>
 
-                                        <div class="skill__order--row"></div>
+                                        <div class="skill__order--row">
+                                            <div class="skill__img--label">
+                                                <img src="assets/Aatrox/AatroxE.png" alt="Aatrox E">
+                                                <div class="skill__key--label">E</div>
+                                            </div>
+                                            <div class="skill__order">
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="skill__up">
+                                                    <div>2</div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="skill__up">
+                                                    <div>8</div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="skill__up">
+                                                    <div>10</div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="skill__up">
+                                                    <div>12</div>
+                                                </div>
+                                                <div class="skill__up--max">
+                                                    <div>13</div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
 
-                                        <div class="skill__order--row"></div>
+                                            </div>
+                                        </div>
 
-                                        <div class="skill__order--row"></div>
+                                        <div class="skill__order--row">
+                                            <div class="skill__img--label">
+                                                <img src="assets/Aatrox/AatroxR.png" alt="Aatrox R">
+                                                <div class="skill__key--label">R</div>
+                                            </div>
+                                            <div class="skill__order">
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="skill__up">
+                                                    <div>6</div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="skill__up">
+                                                    <div>11</div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="skill__up--max">
+                                                    <div>16</div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                                <div class="no__skill--up">
+                                                    <div></div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="skill__order--row">
+                                            <div class="skill__order--row">
+                                                <div class="skill__img--label">
+                                                    <img src="assets/Aatrox/Aatrox_Passive.png" alt="Aatrox_Passive">
+                                                    <div class="skill__key--label">P</div>
+                                                </div>
+                                            </div>
+                                            <div class="skill__order">
+                                                <div class="blank__row"></div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
                 </article>
 
             </div>
