Sección Runas y maestrias terminada.

--- a/index.html
+++ b/index.html
@@ -14,28 +14,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- Iconito que se muestra en la pestaña -->
-    <link rel="canonical" href="https://mirato1.github.io/LandingPage-Mircha/">
+    <link rel="canonical" href="https://mirato1.github.io/Lol-Page/">
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180"
-        href="https://mirato1.github.io/LandingPage-Mircha/assets/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32"
-        href="https://mirato1.github.io/LandingPage-Mircha/assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16"
-        href="https://mirato1.github.io/LandingPage-Mircha/assets/favicon-16x16.png">
-    <link rel="manifest" href="https://mirato1.github.io/LandingPage-Mircha/assets/site.webmanifest">
-    <link rel="mask-icon" href="https://mirato1.github.io/LandingPage-Mircha/assets/safari-pinned-tab.svg"
-        color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://mirato1.github.io/Lol-Page/assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://mirato1.github.io/Lol-Page/assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://mirato1.github.io/Lol-Page/assets/favicon-16x16.png">
+    <link rel="manifest" href="https://mirato1.github.io/Lol-Page/assets/site.webmanifest">
+    <link rel="mask-icon" href="https://mirato1.github.io/Lol-Page/assets/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-config" content="https://mirato1.github.io/assets/LandingPage-Mircha/browserconfig.xml">
+    <meta name="msapplication-config" content="https://mirato1.github.io/assets/Lol-Page/browserconfig.xml">
 
     <meta name="theme-color" content="#d90006">
-    <meta property="og:title" name="twitter:title" content="Landing Page - Giménez Lucas">
+    <meta property="og:title" name="twitter:title" content="Lol Page - Giménez Lucas">
     <meta property="twitter:card" content="summary">
     <meta property="og:type" content="website">
-    <meta property="og:image" name="twitter:image"
-        content="https://mirato1.github.io/LandingPage-Mircha/assets/aatrox.jpg">
-    <meta property="og:url" name="twitter:url" content="https://mirato1.github.io/LandingPage-Mircha/index.html">
+    <meta property="og:image" name="twitter:image" content="https://mirato1.github.io/Lol-Page/assets/aatrox.jpg">
+    <meta property="og:url" name="twitter:url" content="https://mirato1.github.io/Lol-Page/index.html">
 
     <!--Styles CSS-->
     <link rel="stylesheet" href="style.css">
